--- a/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
+++ b/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
@@ -9,6 +9,7 @@
     <Company>tokengo</Company>
     <Description>升级http工具，简化注入</Description>
     <PackageIcon>logo.png</PackageIcon>
+    <Version>1.0.9</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
