--- a/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
+++ b/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
@@ -8,8 +8,8 @@
     <Authors>token</Authors>
     <Company>tokengo</Company>
     <Description>升级http工具，简化注入</Description>
-    <PackageIcon>logo.png</PackageIcon>
-    <Version>1.0.10</Version>
+    <PackageIcon>gitee.png</PackageIcon>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="C:\Users\23957\Pictures\logo.png">
+    <None Include="C:\Users\Administrator\Pictures\gitee.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
@@ -35,6 +35,13 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="favicon.ico">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
