--- a/Token.Inject/Token.Inject.csproj
+++ b/Token.Inject/Token.Inject.csproj
@@ -9,17 +9,18 @@
     <Description>超简化注入</Description>
     <PackageIcon>logo.png</PackageIcon>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.5</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="C:\Users\23957\Pictures\logo.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <None Update="logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
