--- a/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
+++ b/src/Token.HttpClient.Helper/Token.HttpClientHelper.csproj
@@ -14,6 +14,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://gitee.com/hejiale010426/tool-he-ji</RepositoryUrl>
     <PackAsTool>False</PackAsTool>
+    <PackageVersion>1.2.0</PackageVersion>
+    <PackageTags>1.2.0</PackageTags>
+    <PackageReleaseNotes>增加post接口返回stream，修改统一使用的接口返回的参数</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -33,10 +36,6 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="C:\Users\Administrator\Pictures\gitee.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -47,6 +46,10 @@
 
   <ItemGroup>
     <None Update="favicon.ico">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="gitee.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
